--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,19 @@
   <a class="navbar-brand" href="#">
     <h1>Cinema</h1>
   </a>
-
+ 
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div>
-
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav   mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Homepage</a>
+          <a class="nav-link " routerLink="">Homepage</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Film</a>
+          <a class="nav-link " routerLink="carosellcard" >Film</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Offerte</a>
@@ -25,13 +23,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Chi siamo</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="registrazione">Registrati</a>
+        </li>
 
       </ul>
     </div>
   </div>
   <div>
   </div>
-
-
-
 </nav>
+
+<router-outlet></router-outlet>
