--- a/src/app/components/carosello-card/carosello-card.component.html
+++ b/src/app/components/carosello-card/carosello-card.component.html
@@ -1,1 +1,19 @@
-<p>carosello-card works!</p>
+<div class="row mt-5">
+    <div class="py-4 d-flex justify-content-center">
+        <div class="container d-flex justify-content-center">
+            <div class="row d-flex justify-content-center">
+                <div class="card m-1" style="width: 18rem;" *ngFor="let item of this.popularFilm.items">
+                    <img class="card-img-top" src="{{preurl}}{{item.poster_path}}" alt="Card image cap">
+                    <div class="card-body">
+                        <h6 class="card-title">{{item.original_title}} <br><br><strong
+                                style="color: green;">Vote:</strong> <strong>{{item.vote_average}}</strong></h6>
+                        <a href="#" class="btn btn-primary">{{item.id}}</a>
+                    </div>
+                </div>
+            </div><br>
+        </div>
+    </div>
+</div>
+
+
+  
