add router and work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,15 +15,15 @@
           <a class="nav-link " routerLink="">Homepage</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="carosellcard" >Film</a>
+          <a class="nav-link " routerLink="Film" >Catalogo Film</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Offerte</a>
+          <a class="nav-link" routerLink="Offerte">Offerte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Chi siamo</a>
+          <a class="nav-link" routerLink="ChiSiamo">Chi siamo</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item d-flex-right" >
           <a class="nav-link" routerLink="registrazione">Registrati</a>
         </li>
 
