--- a/src/app/components/carosello/carosello.component.html
+++ b/src/app/components/carosello/carosello.component.html
@@ -1,14 +1,11 @@
-
-    <div class="carousel-inner">
-      <div class="carousel-item active" *ngFor="let item of comingFilm.items">
-        <img class="d-block w-100" src="{{preurl}}{{item.poster_path}}" alt="First slide">
-      </div>
+<ngb-carousel >
+  <ng-template ngbSlide *ngFor="let item of comingFilm.items">
+    <div class="picsum-img-wrapper">
+      <img src="{{preurl}}{{item.backdrop_path}}" alt="Random first slide">
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-caption">
+      <h3>{{item.original_title}}</h3>
+      <p>{{item.overview}}</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
