--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,3 +35,68 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+
+<footer class="py-5">
+
+  <div class="row m-2">
+
+      <div class="col-4">
+          <h5>Link veloci</h5>
+          <ul class="nav flex-column">
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Homepage</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Film</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Offerte</a></li>
+              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chi siamo</a></li>
+          </ul>
+      </div>
+
+      <div class="col-4 m-2 ">
+
+          <h5>Contatti</h5>
+          <p>06+ 32412003488</p>
+          <button type="button " class="btn btn-primary rounded-pill m-2 " data-bs-toggle="modal" data-bs-target="#">
+              <i class="fa fa-instagram"></i>
+          </button>
+
+          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+              <i class="fa fa-facebook"></i>
+          </button>
+
+          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+              <i class="fa fa-youtube"></i>
+          </button>
+
+          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+              <i class="fa fa-envelope"></i>
+          </button>
+
+
+      </div>
+
+
+      <div class="col-3 m-2">
+
+          <h5>Riguardo il sito.</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium fugit assumenda quibusdam sunt
+              blanditiis, provident sit tenetur, ipsam consequuntur atque tempora incidunt asperiores culpa ducimus
+              perferendis. A consequuntur quae iure.</p>
+
+      </div>
+  </div>
+
+  <div class="d-flex justify-content-center  border-top">
+      <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                      <use xlink:href="#twitter" />
+                  </svg></a></li>
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                      <use xlink:href="#instagram" />
+                  </svg></a></li>
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                      <use xlink:href="#facebook" />
+                  </svg></a></li>
+      </ul>
+  </div>
+</footer>
