--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,51 @@
-<p>about works!</p>
+<div class="">
+            <img src="https://salvatidavitacerta.files.wordpress.com/2021/09/cinema-vuoto.jpg" alt=""> 
+        </div>
+
+
+<div class="container-fluid  vh-100 d-flex align-items-center flex-column  ">
+
+    <div class=" card p-5 m-3" style="width: 70rem;"> 
+
+    
+    </div>
+
+    <div class=" card d-flex align-items-center justify-content-center" style="width: 70rem;"> 
+
+        <div class="card-body">
+            <div class="row">
+              <div class="col-6">
+                      <p>Rimaniamo sempre a tua disposizione</p>
+              </div>
+          
+            <div class="col-6">
+                <h5 class="py-3"> Hai una richiesta o domanda specifica? -- Contattami da qui sotto. </h5>
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Il tuo nome</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Nome">
+                        <small id="emailHelp" class="form-text text-muted">Non condividerò le tue informazioni con
+                            nessun'altro</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">La tua e-mail</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                            placeholder="Email">
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Testo</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    </div>
+                </form>
+                <button type="submit" class="btn btn-primary m-3">Invia</button>
+
+            </div>
+        </div>
+    </div>
+  
+            </div>
+
+</div>
