--- a/src/app/components/offerte/offerte.component.html
+++ b/src/app/components/offerte/offerte.component.html
@@ -8,8 +8,8 @@
             <button class="btn btn-primary btn-lg" type="button">Example button</button>
         </div>
     </div>
-</div>
-
+</div> 
+<p>ciao</p>
 <div class="container-fluid h-100 p-5 text-white bg-dark rounded-3">
     <h2>Change the background</h2>
     <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix
