--- a/src/app/components/single-film/single-film.component.html
+++ b/src/app/components/single-film/single-film.component.html
@@ -1,1 +1,23 @@
-<p>single-film works!</p>
+
+<div class="container p-4">
+
+    <div class="row">
+
+        <div class="col-6">
+            <img src="" alt="">
+        </div>
+
+        <div class="col-6 ">
+            <h2> Nome film </h2>
+            <p>genere:</p>
+            <p>rating:</p>
+            <p>descrizione:</p>
+        </div>
+
+    </div>
+
+    <div class="container-fluid">
+        <h1>CIAO</h1>
+    </div>
+
+</div>
