--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <a class="navbar-brand" href="#">
     <h1>Cinema</h1>
   </a>
- 
+
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,7 +15,7 @@
           <a class="nav-link " routerLink="">Homepage</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="Film" >Catalogo Film</a>
+          <a class="nav-link " routerLink="Film">Catalogo Film</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="Offerte">Offerte</a>
@@ -23,80 +23,137 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="ChiSiamo">Chi siamo</a>
         </li>
-        <li class="nav-item d-flex-right" >
+        <li class="nav-item d-flex-right">
           <a class="nav-link" routerLink="registrazione">Registrati</a>
         </li>
 
       </ul>
-    </div>
-  </div>
+
   <div>
+    <ul class="navbar-nav">
+      <li class="nav-item px-1">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary rounded-pill" data-bs-toggle="modal"
+          data-bs-target="#exampleModal"> Accedi o registrati </button>
+        <!-- Modal -->
+        <div class="modal fade  " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content  p-4">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+           
+            <input class="form-control" type="text" name="cognome" placeholder="Email" >
+  
+            <input class="form-control my-2" type="text" name="cognome" placeholder="Password" > 
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Login</button>
+                <br>
+                <a routerLink="/registrazione" style="color: inherit; text-decoration: none;">Non sei registrato? Clicca
+                  qui per registrati!</a>
+              </div>
+        
+            </div>
+          </div>
+        </div>
+
+      </li>
+      <li class="nav-item px-1 ">
+        <button type="button" class="btn btn-primary rounded-pill " data-bs-toggle="modal" data-bs-target="#">
+          <i class="fa fa-phone"></i>
+        </button>
+      </li>
+      <li class="nav-item px-1">
+        <button type="button" class="btn btn-primary rounded-pill " data-bs-toggle="modal" data-bs-target="#">
+          <i class="fa fa-envelope"></i>
+        </button>
+      </li>
+      <li class="nav-item px-1">
+        <button type="button" class="btn btn-primary rounded-pill " data-bs-toggle="modal" data-bs-target="#">
+          <i class="fa fa-instagram"></i>
+        </button>
+      </li>
+      <li class="nav-item px-1">
+        <button type="button" class="btn btn-primary rounded-pill " data-bs-toggle="modal" data-bs-target="#">
+          <i class="fa fa-facebook"></i>
+        </button>
+      </li>
+    </ul>
+
   </div>
+
+    </div>
+
+    
+  </div>
+
+
 </nav>
 
 <router-outlet></router-outlet>
 
 
-<footer class="py-5">
+<footer class="container-fluid py-5">
 
-  <div class="row m-2">
+  <div class="container-fluidrow m-2">
 
-      <div class="col-4">
-          <h5>Link veloci</h5>
-          <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Homepage</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Film</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Offerte</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chi siamo</a></li>
-          </ul>
-      </div>
+    <div class="col-4">
+      <h5>Link veloci</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Homepage</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Film</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Offerte</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Chi siamo</a></li>
+      </ul>
+    </div>
 
-      <div class="col-4 m-2 ">
+    <div class="col-4 m-2 ">
 
-          <h5>Contatti</h5>
-          <p>06+ 32412003488</p>
-          <button type="button " class="btn btn-primary rounded-pill m-2 " data-bs-toggle="modal" data-bs-target="#">
-              <i class="fa fa-instagram"></i>
-          </button>
+      <h5>Contatti</h5>
+      <p>06+ 32412003488</p>
+      <button type="button " class="btn btn-primary rounded-pill m-2 " data-bs-toggle="modal" data-bs-target="#">
+        <i class="fa fa-instagram"></i>
+      </button>
 
-          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
-              <i class="fa fa-facebook"></i>
-          </button>
+      <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+        <i class="fa fa-facebook"></i>
+      </button>
 
-          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
-              <i class="fa fa-youtube"></i>
-          </button>
+      <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+        <i class="fa fa-youtube"></i>
+      </button>
 
-          <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
-              <i class="fa fa-envelope"></i>
-          </button>
-
-
-      </div>
+      <button type="button " class="btn btn-primary rounded-pill m-2" data-bs-toggle="modal" data-bs-target="#">
+        <i class="fa fa-envelope"></i>
+      </button>
 
 
-      <div class="col-3 m-2">
+    </div>
 
-          <h5>Riguardo il sito.</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium fugit assumenda quibusdam sunt
-              blanditiis, provident sit tenetur, ipsam consequuntur atque tempora incidunt asperiores culpa ducimus
-              perferendis. A consequuntur quae iure.</p>
 
-      </div>
+    <div class="col-3 m-2">
+
+      <h5>Riguardo il sito.</h5>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium fugit assumenda quibusdam sunt
+        blanditiis, provident sit tenetur, ipsam consequuntur atque tempora incidunt asperiores culpa ducimus
+        perferendis. A consequuntur quae iure.</p>
+
+    </div>
   </div>
 
   <div class="d-flex justify-content-center  border-top">
-      <p>&copy; 2021 Company, Inc. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
-          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                      <use xlink:href="#twitter" />
-                  </svg></a></li>
-          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                      <use xlink:href="#instagram" />
-                  </svg></a></li>
-          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                      <use xlink:href="#facebook" />
-                  </svg></a></li>
-      </ul>
+    <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+    <ul class="list-unstyled d-flex">
+      <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#twitter" />
+          </svg></a></li>
+      <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#instagram" />
+          </svg></a></li>
+      <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#facebook" />
+          </svg></a></li>
+    </ul>
   </div>
 </footer>
