--- a/src/app/components/single-film/single-film.component.html
+++ b/src/app/components/single-film/single-film.component.html
@@ -1,15 +1,23 @@
-<div class="container p-4" >
-
-
-        <div class="col-6">
-            <img src="{{preUrl}}{{this.dataFilm.backdrop_path}}" alt="">
+<div class="p-5 mb-4 text-white bg-dark rounded-3" style="background-image:url({{preUrl}}{{this.dataFilm.backdrop_path}});">
+        <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">{{this.dataFilm.original_title}}</h1>
+            <button class="btn btn-primary btn-lg mt-5" type="button">Prenota un ticket</button>
         </div>
+    </div>
 
+      <div class="">
+  <!-- <img src="{{preUrl}}{{this.dataFilm.backdrop_path}}" alt="">
+   <button class="btn btn-success">Prenota un ticket</button>
+        </div> -->
+
+<div class="row container">
+  
+<div class="container p-4" >
         <div class="col-6 ">
             <h2> {{this.dataFilm.original_title}} </h2>
             <p><strong>Vote </strong>{{this.dataFilm.vote_average}}</p>
             <p>{{this.dataFilm.overview}}</p>
         </div>
-
+</div>
 
 </div>
