--- a/src/app/components/single-film/single-film.component.html
+++ b/src/app/components/single-film/single-film.component.html
@@ -8,7 +8,7 @@
       <div class="">
   <!-- <img src="{{preUrl}}{{this.dataFilm.backdrop_path}}" alt="">
    <button class="btn btn-success">Prenota un ticket</button>
-        </div> -->
+        </div> casdasssss -->
 
 <div class="row container">
   
