--- a/src/app/components/single-film/single-film.component.html
+++ b/src/app/components/single-film/single-film.component.html
@@ -1,6 +1,6 @@
-<div class="p-5 mb-4 text-white bg-dark rounded-3" style="background-image:url({{preUrl}}{{this.dataFilm.backdrop_path}});">
+<div class="p-5 mb-4 text-white bg-dark rounded-3" style="background-image:url({{preUrl}}{{this.dataFilm.img}});">
         <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">{{this.dataFilm.original_title}}</h1>
+            <h1 class="display-5 fw-bold">{{this.dataFilm.nome}}</h1>
             <button class="btn btn-primary btn-lg mt-5" type="button">Prenota un ticket</button>
         </div>
     </div>
