--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,7 @@
     <ul class="navbar-nav">
       <li class="nav-item px-1">
         <!-- Button trigger modal -->
+        <button></button>
         <button type="button" class="btn btn-primary rounded-pill" data-bs-toggle="modal"
           data-bs-target="#exampleModal"> Accedi o registrati </button>
         <!-- Modal -->
